CHANNELMGR-175: prevent component properties window from growing outside visible area
Also prevent horizontal scrollbars inside the form and the window, and make the window slightly wider by default.

--- a/channel-manager/frontend/src/main/resources/org/onehippo/cms7/channelmanager/ChannelManagerPerspective.css
+++ b/channel-manager/frontend/src/main/resources/org/onehippo/cms7/channelmanager/ChannelManagerPerspective.css
@@ -850,8 +850,11 @@
 }
 
 .channel-manager .component-properties-editor > .x-panel-bwrap > .x-panel-body {
-    overflow-x: hidden !important;
     overflow-y: auto;
+}
+
+.templateComposerPropertiesForm form {
+    overflow-x: hidden !important;
 }
 
 .ext-gecko .x-window-body .templateComposerPropertiesForm .x-form-item {
